@@ -17,6 +17,7 @@ Version 2.4.0 - The river knows.
 		  mercurial and git
 		* Fix bfd detection for systems missing -liberty
 		* Add support for 'canceled.met' to the fileview tool
+		* Implemented the missing 'show shared' command in amulecmd
 
 	iz0bbz:
 		* Fix WinSock library version detection with MinGW-w64
